# face_nameplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
arcface/: README.md  arcface_inference.ipynb
doc/: CHAT.md  CHAT_cn.md  DEBUG.md
include/: face_alignment.h  face_detector.h  face_recognizer.h
src/: batch_enrollment.cpp  camera_test.cpp  face_alignment.cpp  face_alignment_test.cpp  face_detection_test.cpp  face_detector.cpp  face_detector_debug.cpp  face_recognition_test.cpp  face_recognizer.cpp  face_recognizer_debug.cpp  nameplate_main.cpp
